fix style on mobile

--- a/examples/style.css
+++ b/examples/style.css
@@ -72,6 +72,7 @@ iframe {
   display: block;
   border: none;
   margin: 10px auto;
+  margin-bottom: 0;
   height: 24px;
 }
 
@@ -89,12 +90,12 @@ iframe {
     width: 700px;
   }
 
-  h1, h2, p, #controls {
+  h1, h2, p {
     width: 700px;
     margin: 1rem auto;
   }
 
-  /* Kill gap between controls and iframe. */
-  iframe { margin-bottom: 0; }
-  #controls { margin-top: 0; }
+  #controls {
+    width: 700px;
+  }
 }
